# Braillestream

./: README.md  pyproject.toml
docs/: cli-usage.md  packet-format.md
examples/: README.md  example_test_2_canada_suffer.md
examples/input/: README.md
examples/output/: canada_suffer.payload.extracted.bs  x_test.bs  x_test.bs1  x_test.density.ascii.txt  x_test.density.numeric.txt  x_test.density.txt  x_test.density.visible.txt  x_test.pixels.txt  x_test.rendered.txt
insights/: BrailleStream Projection Calculus.md
src/braillestream/: __init__.py  cli.py  codec.py  mapping.py  packet.py  render.py
tests/: test_cli.py  test_cli_packet.py  test_codec.py  test_mapping.py  test_packet.py  test_render.py
