[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "braillestream"
version = "0.1.0"
description = "Text-native visual encoding using Unicode Braille glyph streams."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
braillestream = "braillestream.cli:main"
